--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -92,7 +92,7 @@
           <p>I visit your pets in their own home. Feeding, changing water bowls and litter trays. This is a 20 minute visit which includes picking up mail, switching lights on/off and snuggles with your pet. </p>
         </div>
         <div class="col-md-3 col-sm-12">
-          <center><legend>
+          <legend>
             <h4><a href="/about">
               <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -102,7 +102,7 @@
             </a></h4>
           </legend>
           <p>I am fully insured by <a target="_blank" href="https://www.petplan.co.uk">PetPlan</a> the top pet insurance agency in the country. Making sure that your pets are safe is my top priority. They will be well cared for.</p>
-        </center></div>
+        </div>
       </div>
       </div>
       <div class="partition"></div>
