--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,22 @@
 <footer class="navbar navbar-inverse">
-	<div class="container">
-		<div class="navbar-header">
-			<a class="navbar-brand" href="https://www.github.com/masakistewart">
-				<img id="logo" src="cairoLogo.png" alt="creator-logo" />
-			</a>
-		</div>
+	<div class="container-fluid">
+		<ul class="nav navbar-nav">
+			<li>
+				<address>
+				  <strong>ilovedogwalks</strong><br>
+				  34 Westbury Road <br>
+				  London, N12 7NX<br>
+				  <abbr title="Phone">P:</abbr> 07971060362
+				</address>
+
+				<address>
+				  <strong>Emilie Stewart</strong><br>
+				  <a class="navbar-link" href="mailto:#">emiliealoha@gmail.com</a>
+				</address>
+			</li>
+			<li><a class="navbar-link" href="https://www.github.com/masakistewart">
+				<img id="logo" src="cairoLogo.png" alt="creators-logo" />
+			</a></li>
+		</ul>
 	</div>
 </footer>
