--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -15,7 +15,7 @@
 	<div class="jumbotron no-border-radius">
 		<h1 class="page-header">Contact<small class="smally"> Tel: 07971060362 | Email: info@ilovedogwalks.co.uk</small></h2>
 		<div class="row">
-			<div class="col-md-7">
+			<div class="col-md-6 col-md-offset-1">
 				<iframe width="500" height="450" frameborder="0" style="margin: 1em;"
 	src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJx_FvA-IZdkgRzce1x-tA2Dc&key=AIzaSyBAbx-I6MUz8mqe4OauNjlkmmVpbYZkHl4" ></iframe>
 			</div>
