--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -49,57 +49,57 @@
 </div>
   <!-- carousel end -->
 
-    <div class="partition">
-    </div>
+    <!-- <div class="partition">
+    </div> -->
 
     <div class="jumbotron no-border-radius">
-    <div class="col-md-12"><h1 id="mainPageHeader" class="page-header">Dog Walking Services</h1></div>
+    <div class="col-md-12 text-center"><h1 id="mainPageHeader" class="page-header">Dog Walking Services</h1></div>
     <div class="row">
       <div class="col-md-3 col-sm-12">
-        <legend>
-          <h4><a href="/about">
-            <span class="fa-stack fa-2x">
+        <legend class="text-center">
+          <h3><a href="/about">
+            <span class="fa-stack fa-lg">
               <i class="fa fa-circle fa-stack-2x"></i>
               <i class="fa fa-paw fa-stack-1x fa-inverse"></i>
             </span>
             Dog Walks
-          </a></h4>
+          </a></h3>
         </legend>
         <p>Choose between a 1 hour walk or 1.5hr walk depending on your dogs needs. Your dog will be safely picked up and returned happy and ready for a nap. I am insured by PetPlan and have all the necessary paperwork</p>
         </div>
         <div class="col-md-3 col-sm-12">
-          <legend>
-            <h4><a href="/about">
-              <span class="fa-stack fa-2x">
+          <legend class="text-center">
+            <h3><a href="/about">
+              <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x green"></i>
                 <i class="fa fa-home fa-stack-1x fa-inverse"></i>
               </span>
               Boarding
-            </a></h4>
+            </a></h3>
           </legend>
           <p>Dog boarding in a home environment. Give your dog a fun-filled day of supervised play, hanging out and making friends with other animals. Your pet will nap and do what animals love to do – play! </p>
         </div>
         <div class="col-md-3 col-sm-12">
-          <legend>
-            <h4><a href="/about">
-              <span class="fa-stack fa-2x">
+          <legend class="text-center">
+            <h3><a href="/about">
+              <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
               </span>
               Small Animal Care
-            </a></h4>
+            </a></h3>
           </legend>
           <p>I visit your pets in their own home. Feeding, changing water bowls and litter trays. This is a 20 minute visit which includes picking up mail, switching lights on/off and snuggles with your pet. </p>
         </div>
         <div class="col-md-3 col-sm-12">
-          <legend>
-            <h4><a href="/about">
-              <span class="fa-stack fa-2x">
+          <legend class="text-center">
+            <h3><a href="/about">
+              <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-certificate fa-stack-1x fa-inverse"></i>
               </span>
               Fully Insured
-            </a></h4>
+            </a></h3>
           </legend>
           <p>I am fully insured by <a target="_blank" href="https://www.petplan.co.uk">PetPlan</a> the top pet insurance agency in the country. Making sure that your pets are safe is my top priority. They will be well cared for.</p>
         </div>
@@ -109,7 +109,7 @@
 
 
   <div class="jumbotron no-border-radius last-child">
-    <legend><h2 class="text-center page-lead"><b>Dog Walking - Dog Boarding - Small Animal Care</b></h2></legend>
+    <legend class="text-center"><h2 class="text-center page-lead"><b>Dog Walking - Dog Boarding - Small Animal Care</b></h2></legend>
     <p class="lead">Hello, my name is Emilie Stewart and I run 'ilovedogwalks'. I offer dog walking and small pet care in North London. Based in North Finchley, I cover all of Finchley and the surrounding areas.</p><p>Being a professional dog walker and small pet carer, I am fully insured and have over 10 years experience walking dogs and caring for small animals. I dedicate my time to caring for your pets. All the animals in my care are treated with love. Your pet will be treated as my own. I just love animals and of course they always come first.</p>
   </div>
 </div>
