--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -15,7 +15,8 @@
 
 <div class="container-fluid">
 	<div class="jumbotron no-border-radius last-child">
-		<div class="col-md-12 text-right" style="margin-top: 2%;"><a href="/reviews" class="btn btn-success">Reviews!</a></div>
+		<br>
+		<div class="col-md-3 col-md-offset-9 text-right"><a href="/reviews" class="reviews btn btn-success">Reviews!</a></div>
 		<div class="row">
 			<div class="col-sm-12">
 				<h1 class="page-header">Services Offered<small class="smally"> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h1>
