--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="navbar navbar-inverse">
 	<div class="container-fluid">
-		<ul class="nav navbar-nav">
+		<ul class="nav nav-footer navbar-nav">
 			<li>
 				<address>
 				  <strong>ilovedogwalks</strong><br>
