--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,108 +11,106 @@
 <body id="background">
 <% include ../partials/header %>
 <div class="container-fluid">
-<!-- for carousel -->
+  <!-- for carousel -->
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <div class="row">
-    <div class="col-md-12">
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
+      <div class="col-md-12">
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
 
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img class="carouselImage" src="dog-img.jpg" alt="Dog walking in a park">
-      </div>
-      <div class="item">
-        <img class="carouselImage" src="dog-img2.jpg" alt="Dogs out in the park">
-      </div>
-      <div class="item">
-        <img class="carouselImage" src="dog-img3.jpg" alt="Dog walker in Finchley">
-      </div>
-    </div>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img class="carouselImage" src="dog-img.jpg" alt="Dog walking in a park">
+          </div>
+          <div class="item">
+            <img class="carouselImage" src="dog-img2.jpg" alt="Dogs out in the park">
+          </div>
+          <div class="item">
+            <img class="carouselImage" src="dog-img3.jpg" alt="Dog walker in Finchley">
+          </div>
+        </div>
 
-    <!-- Controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+        <!-- Controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
     </div>
   </div>
-</div>
   <!-- carousel end -->
 
     <!-- <div class="partition">
     </div> -->
-
-    <div class="jumbotron no-border-radius">
-    <div class="col-md-12 text-center"><h1 id="mainPageHeader" class="page-header">Dog Walking Services</h1></div>
-    <div class="row">
+  <div class="col-md-12 text-center">
+    <h1 id="mainPageHeader" class="page-header">Dog Walking Services</h1>
+  </div>
+  <div class="row">
+    <div class="col-md-3">
+      <div class="square-index">
+        <h3><a href="/about">
+          <span class="fa-stack fa-lg">
+            <i class="fa fa-circle fa-stack-2x"></i>
+            <i class="fa fa-paw fa-stack-1x fa-inverse"></i>
+          </span>
+          Dog Walks
+        </a></h3>
+        <p>Choose between a 1 hour walk or 1.5hr walk depending on your dogs needs. Your dog will be safely picked up and returned happy and ready for a nap.</p>
+      </div>
+      </div>
       <div class="col-md-3 col-sm-12">
-        <legend class="text-center">
+        <div class="square-index">
+          <h3><a href="/about">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x green"></i>
+              <i class="fa fa-home fa-stack-1x fa-inverse"></i>
+            </span>
+            Boarding
+          </a></h3>
+          <p>Dog boarding in a home environment. Give your dog a fun-filled day of supervised play, hanging out and making friends with other animals. Your pet will nap and do what animals love to do – play! </p>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-12">
+        <div class="square-index">
           <h3><a href="/about">
             <span class="fa-stack fa-lg">
               <i class="fa fa-circle fa-stack-2x"></i>
-              <i class="fa fa-paw fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-github fa-stack-1x fa-inverse"></i>
             </span>
-            Dog Walks
+            Small Animal Care
           </a></h3>
-        </legend>
-        <p>Choose between a 1 hour walk or 1.5hr walk depending on your dogs needs. Your dog will be safely picked up and returned happy and ready for a nap. I am insured by PetPlan and have all the necessary paperwork</p>
-        </div>
-        <div class="col-md-3 col-sm-12">
-          <legend class="text-center">
-            <h3><a href="/about">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x green"></i>
-                <i class="fa fa-home fa-stack-1x fa-inverse"></i>
-              </span>
-              Boarding
-            </a></h3>
-          </legend>
-          <p>Dog boarding in a home environment. Give your dog a fun-filled day of supervised play, hanging out and making friends with other animals. Your pet will nap and do what animals love to do – play! </p>
-        </div>
-        <div class="col-md-3 col-sm-12">
-          <legend class="text-center">
-            <h3><a href="/about">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-              </span>
-              Small Animal Care
-            </a></h3>
-          </legend>
           <p>I visit your pets in their own home. Feeding, changing water bowls and litter trays. This is a 20 minute visit which includes picking up mail, switching lights on/off and snuggles with your pet. </p>
         </div>
-        <div class="col-md-3 col-sm-12">
-          <legend class="text-center">
-            <h3><a href="/about">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-certificate fa-stack-1x fa-inverse"></i>
-              </span>
-              Fully Insured
-            </a></h3>
-          </legend>
+      </div>
+      <div class="col-md-3 col-sm-12">
+        <div class="square-index">
+          <h3><a href="/about">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-certificate fa-stack-1x fa-inverse"></i>
+            </span>
+            Fully Insured
+          </a></h3>
           <p>I am fully insured by <a target="_blank" href="https://www.petplan.co.uk">PetPlan</a> the top pet insurance agency in the country. Making sure that your pets are safe is my top priority. They will be well cared for.</p>
         </div>
       </div>
-      </div>
-      <div class="partition"></div>
+  </div>
+  <div class="partition"></div>
 
 
   <div class="jumbotron no-border-radius last-child">
     <legend class="text-center"><h2 class="text-center page-lead"><b>Dog Walking - Dog Boarding - Small Animal Care</b></h2></legend>
     <p class="lead">Hello, my name is Emilie Stewart and I run 'ilovedogwalks'. I offer dog walking and small pet care in North London. Based in North Finchley, I cover all of Finchley and the surrounding areas.</p><p>Being a professional dog walker and small pet carer, I am fully insured and have over 10 years experience walking dogs and caring for small animals. I dedicate my time to caring for your pets. All the animals in my care are treated with love. Your pet will be treated as my own. I just love animals and of course they always come first.</p>
   </div>
-</div>
 </div>
 
 
