--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -76,7 +76,7 @@
             </span>
             Boarding
           </a></h3>
-          <p>Dog boarding in a home environment. Give your dog a fun-filled day of supervised play, hanging out and making friends with other animals. Your pet will nap and do what animals love to do – play! </p>
+          <p>Dog boarding in a home environment. Give your dog a fun-filled day of supervised play, hanging out and making friends with other animals. </p>
         </div>
       </div>
       <div class="col-md-3 col-sm-12">
@@ -88,7 +88,7 @@
             </span>
             Small Animal Care
           </a></h3>
-          <p>I visit your pets in their own home. Feeding, changing water bowls and litter trays. This is a 20 minute visit which includes picking up mail, switching lights on/off and snuggles with your pet. </p>
+          <p>I visit your pets in their own home. Feeding, changing water bowls and litter trays. This is a 20 minute long visit for your pet. </p>
         </div>
       </div>
       <div class="col-md-3 col-sm-12">
