--- a/public/main.css
+++ b/public/main.css
@@ -71,13 +71,22 @@ address {
 
 .square-index {
 	border-radius: 25px;
-	padding: 10px;
+	padding: 15px;
 	font-size: 1.8em;
 	color: #777777;
 	background: rgba(255, 255, 255, .99);
-	height: 460px;
+	height: 450px;
 	margin-bottom: 15%;
 }
+
+.square-index:first-child {
+	margin-left: 5%;
+}
+
+.square-index:last-child {
+	margin-right: 5%;
+}
+
 .jumbotron.no-border-radius {
 	border-radius: 0;
 }
