--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -57,7 +57,7 @@
   <div class="row">
     <div class="col-md-3">
       <div class="square-index">
-        <h3><a href="/about">
+        <h3 class="text-center"><a href="/about">
           <span class="fa-stack fa-lg">
             <i class="fa fa-circle fa-stack-2x"></i>
             <i class="fa fa-paw fa-stack-1x fa-inverse"></i>
@@ -69,7 +69,7 @@
       </div>
       <div class="col-md-3 col-sm-12">
         <div class="square-index">
-          <h3><a href="/about">
+          <h3 class="text-center"><a href="/about">
             <span class="fa-stack fa-lg">
               <i class="fa fa-circle fa-stack-2x green"></i>
               <i class="fa fa-home fa-stack-1x fa-inverse"></i>
@@ -81,7 +81,7 @@
       </div>
       <div class="col-md-3 col-sm-12">
         <div class="square-index">
-          <h3><a href="/about">
+          <h3 class="text-center"><a href="/about">
             <span class="fa-stack fa-lg">
               <i class="fa fa-circle fa-stack-2x"></i>
               <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -93,7 +93,7 @@
       </div>
       <div class="col-md-3 col-sm-12">
         <div class="square-index">
-          <h3><a href="/about">
+          <h3 class="text-center"><a href="/about">
             <span class="fa-stack fa-lg">
               <i class="fa fa-circle fa-stack-2x"></i>
               <i class="fa fa-certificate fa-stack-1x fa-inverse"></i>
@@ -108,7 +108,7 @@
 
 
   <div class="jumbotron no-border-radius last-child">
-    <legend class="text-center"><h2 class="text-center page-lead"><b>Dog Walking - Dog Boarding - Small Animal Care</b></h2></legend>
+    <h2 class="text-center page-lead"><b>Dog Walking - Dog Boarding - Small Animal Care</b></h2>
     <p class="lead">Hello, my name is Emilie Stewart and I run 'ilovedogwalks'. I offer dog walking and small pet care in North London. Based in North Finchley, I cover all of Finchley and the surrounding areas.</p><p>Being a professional dog walker and small pet carer, I am fully insured and have over 10 years experience walking dogs and caring for small animals. I dedicate my time to caring for your pets. All the animals in my care are treated with love. Your pet will be treated as my own. I just love animals and of course they always come first.</p>
   </div>
 </div>
