add overflow to index squares

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,20 +1,25 @@
 <footer class="navbar navbar-inverse">
 	<div class="container-fluid">
-		<ul class="nav nav-footer navbar-nav">
-			<li>
-				<address>
-				  <strong>ilovedogwalks</strong><br>
-				  34 Westbury Road <br>
-				  London, N12 7NX<br>
-				  <abbr title="Phone">P:</abbr> 07971060362
-				</address>
-			</li>
-			<li>
-				<address>
-				  <strong>Emilie Stewart</strong><br>
-				  <a class="navbar-link" href="mailto:#">emiliealoha@gmail.com</a>
-				</address>
-			</li>
-		</ul>
+		<div class="nav nav-footer navbar-nav">
+			<div class="row">
+				<div class="col-md-4 left-side">
+					<img id="logo" src="cairoLogo.png" alt="creator's logo">
+				</div>
+				<div class="col-md-4 middle">
+					<address>
+					  <strong>ilovedogwalks</strong><br>
+					  34 Westbury Road <br>
+					  London, N12 7NX<br>
+					  <abbr title="Phone">P:</abbr> 07971060362
+					</address>
+				</div>
+				<div class="col-md-4 right-side">
+					<address>
+					  <strong>Emilie Stewart</strong><br>
+					  <a class="navbar-link" href="mailto:#">emiliealoha@gmail.com</a>
+					</address>
+				</div>
+			</div>
+		</div>
 	</div>
 </footer>
