--- a/public/main.css
+++ b/public/main.css
@@ -77,6 +77,7 @@ address {
 	background: rgba(255, 255, 255, .99);
 	height: 450px;
 	margin-bottom: 15%;
+	overflow: scroll;
 }
 
 .square-index:first-child {
@@ -162,6 +163,14 @@ iframe {
 
 .fluffy-bunny {
 	color: rgba(255,255,255, .5);
+}
+
+.left-side {
+	margin-top: 20%;
+}
+
+.right-side {
+	margin-top: 20%;
 }
 
 .navbar-text.navbar-texty {
