--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -25,7 +25,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-4 col-sm-4">
-						<img id="profilePic" class="img-thumbnail" src="dogwalking.jpg">
+						<img id="profilePic" class="img-thumbnail" src="dogwalking.jpg" alt="picture of the owner">
 						<a class="twitter-timeline" href="https://twitter.com/London_Dog_Walk" data-widget-id="681905171434061824" data-chrome="">Tweets by @London_Dog_Walk</a>
 					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
 					</script>
@@ -38,16 +38,17 @@
 						​<p>I currently walk small groups of dogs in the North London areas. I walk only small groups, as I believe that walking a smaller group means that your dog gets the love and attention they need, while at the same time they get to socialize with other friendly dogs.</p>
 
 						​<p>I'm very passionate about the work I do. And have excellent references to show this. I am also CRB checked, insured with PetPlan insurance and have reasonable rates!</p>
-						<center><i class="fa fa-paw text-center fa-2x"></i>
-						<i class="fa fa-paw text-center fa-2x" style="margin-left: 5%;margin-right: 5%;"></i>
-						<i class="fa fa-paw text-center fa-2x"></i>
-						</center>
+						<div class="text-center">
+							<i class="fa fa-paw text-center fa-2x"></i>
+							<i class="fa fa-paw text-center fa-2x" style="margin-left: 5%;margin-right: 5%;"></i>
+							<i class="fa fa-paw text-center fa-2x"></i>
+						</div>
 
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-12">
-				<center><a id="review-button" href="/reviews" class="btn btn-success form-control">Reviews!</a></center>
+				<a id="review-button" href="/reviews" class="btn btn-success form-control \">Reviews!</a>
 				<div class="fb-page" data-href="https://www.facebook.com/northlondondogwalkers" data-tabs="timeline" data-width="350" data-height="1200" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" transparent><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/northlondondogwalkers"><a href="https://www.facebook.com/northlondondogwalkers">Dog Walking - ilovedogwalks</a></blockquote></div></div>
 			</div>
 		</div>
