--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,8 +14,6 @@
   <!-- for carousel -->
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
-    <div class="row">
-      <div class="col-md-12">
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -104,11 +102,67 @@
         </div>
       </div>
   </div>
-  <div class="partition"></div>
+  <div class="partition">
+    <div class="row">
+      <div class="col-sm-12">
+        <h2 id="services-offered" class="page-header text-center">Services Offered<small class="smally"> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12 col-md-4">
+        <div class="thumbnail">
+          <img class="thumbnail-img"  src="dog-img5.jpg" alt="dog walking price">
+          <div class="caption">
+            <h3 class="text-center">Walks - £12</h3>
+            <ul>
+              <li><p>Pick up and drop off</p></li>
+              <li><p>Exercise & socialization with other dogs</p></li>
+              <li><p>1 - 1.5 hours of walking</p></li>
+              <li><p>Park location vary</p></li>
+              <li><p>Brings dogs home ready for a nap</p></li>
+            </ul>
+            <p class="text-center"><a href="/email" class="btn btn-danger" role="button">Inquire Now!</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4">
+        <div class="thumbnail">
+          <img class="thumbnail-img" class="shorten" src="dog-img6.jpg" alt="dog walking price">
+          <div class="caption">
+            <h3 class="text-center">Home Visit/Cat Visit - £12</h3>
+            <ul>
+              <li><p>Visits in the comfort of their own home</p></li>
+              <li><p>Ideal for young puppies & elderly dogs</p></li>
+              <li><p>Small Animal feeding including cat visits</p></li>
+              <li><p>Perfect for the busy animal owner</p></li>
+            </ul>
+            <p class="text-center"><a href="/email" class="btn btn-danger" role="button">Inquire Now!</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-4">
+        <div class="thumbnail">
+          <img class="thumbnail-img" src="dog-img4.jpg" alt="dog walking price">
+          <div class="caption">
+            <h3 class="text-center">Day Care - £25</h3>
+            <ul>
+            <li><p>Pick Up & Drop Off</p></li>
+            <li><p>General hours 10am - 4pm</p></li>
+            <li><p>Includes 2 hours of walking</p></li>
+            <li><p>Fantastic for dogs who don't like to be left on their own.</p></li>
+            <li><p>Ideal for the busy animal owner</p></li>
+            </ul>
+            <p class="text-center"><a href="/email" class="btn btn-danger" role="button">Inquire Now!</a></p>
+          </div>
+        </div>
+      </div>
+      </div>
 
-
+  </div>
+</div>
+<div class="container">
   <div class="jumbotron no-border-radius last-child">
-    <h2 class="text-center page-lead"><b>Dog Walking - Dog Boarding - Small Animal Care</b></h2>
+    <h2 class="text-center page-lead">Dog Walking - Dog Boarding - Small Animal Care</h2>
     <p class="lead">Hello, my name is Emilie Stewart and I run 'ilovedogwalks'. I offer dog walking and small pet care in North London. Based in North Finchley, I cover all of Finchley and the surrounding areas.</p><p>Being a professional dog walker and small pet carer, I am fully insured and have over 10 years experience walking dogs and caring for small animals. I dedicate my time to caring for your pets. All the animals in my care are treated with love. Your pet will be treated as my own. I just love animals and of course they always come first.</p>
   </div>
 </div>
