--- a/public/main.css
+++ b/public/main.css
@@ -45,11 +45,6 @@ address {
 	padding-bottom: 30px;
 }
 
-.partition-thin {
-	width: 100%;
-	height: 45px;
-}
-
 .partition.main{
 	margin-top: 5%;
 	height: 1000px;
@@ -237,7 +232,6 @@ iframe {
 		font-size: 1.8em;
 		color: #777777;
 		background: rgba(255, 255, 255, .99);
-		height: 300px;
 		width: 350px
 		margin-bottom: 15%;
 	}
@@ -256,8 +250,20 @@ iframe {
 		font-size: 1.5em;
 		padding: 1%;
 	}
+	.right-side {
+		margin: 0;
+	}
+
+	.middle {
+		margin: 0;
+	}
+
+	.left-side {
+		margin: 0;
+	}
 
 	.nav-footer {
 		margin: 0;
+		padding: 0;
 	}
 }
