--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -50,10 +50,14 @@
     <!-- <div class="partition">
     </div> -->
   <div class="col-md-12 text-center">
-    <h1 id="mainPageHeader" class="page-header">Dog Walking Services</h1>
+    <blockquote>
+      <h1 class="page-header">Love and Care for your Pets</h1>
+    <cite>Emilie Stewart</cite>
+  </blockquote>
+
   </div>
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-lg-3">
       <div class="square-index">
         <h3 class="text-center"><a href="/about">
           <span class="fa-stack fa-lg">
@@ -65,7 +69,7 @@
         <p>Choose between a 1 hour walk or 1.5hr walk depending on your dogs needs. Your dog will be safely picked up and returned happy and ready for a nap.</p>
       </div>
       </div>
-      <div class="col-md-3 col-sm-12">
+      <div class="col-lg-3 col-sm-12">
         <div class="square-index">
           <h3 class="text-center"><a href="/about">
             <span class="fa-stack fa-lg">
@@ -77,7 +81,7 @@
           <p>Dog boarding in a home environment. Give your dog a fun-filled day of supervised play, hanging out and making friends with other animals. </p>
         </div>
       </div>
-      <div class="col-md-3 col-sm-12">
+      <div class="col-lg-3 col-sm-12">
         <div class="square-index">
           <h3 class="text-center"><a href="/about">
             <span class="fa-stack fa-lg">
@@ -89,7 +93,7 @@
           <p>I visit your pets in their own home. Feeding, changing water bowls and litter trays. This is a 20 minute long visit for your pet. </p>
         </div>
       </div>
-      <div class="col-md-3 col-sm-12">
+      <div class="col-lg-3 col-sm-12">
         <div class="square-index">
           <h3 class="text-center"><a href="/about">
             <span class="fa-stack fa-lg">
@@ -134,7 +138,7 @@
               <li><p>Visits in the comfort of their own home</p></li>
               <li><p>Ideal for young puppies & elderly dogs</p></li>
               <li><p>Small Animal feeding including cat visits</p></li>
-              <li><p>Perfect for the busy animal owner</p></li>
+              <br>
             </ul>
             <p class="text-center"><a href="/email" class="btn btn-danger" role="button">Inquire Now!</a></p>
           </div>
@@ -149,7 +153,6 @@
             <li><p>Pick Up & Drop Off</p></li>
             <li><p>General hours 10am - 4pm</p></li>
             <li><p>Includes 2 hours of walking</p></li>
-            <li><p>Fantastic for dogs who don't like to be left on their own.</p></li>
             <li><p>Ideal for the busy animal owner</p></li>
             </ul>
             <p class="text-center"><a href="/email" class="btn btn-danger" role="button">Inquire Now!</a></p>
