--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="navbar navbar-inverse">
+<div class="navbar navbar-inverse">
 	<div class="container-fluid">
 		<div class="nav nav-footer navbar-nav">
 			<div class="row">
@@ -22,4 +22,4 @@
 			</div>
 		</div>
 	</div>
-</footer>
+</div>
