add address and prices to main page

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -163,10 +163,34 @@
 
   </div>
 </div>
-<div class="container">
-  <div class="jumbotron no-border-radius last-child">
-    <h2 class="text-center page-lead">Dog Walking - Dog Boarding - Small Animal Care</h2>
-    <p class="lead">Hello, my name is Emilie Stewart and I run 'ilovedogwalks'. I offer dog walking and small pet care in North London. Based in North Finchley, I cover all of Finchley and the surrounding areas.</p><p>Being a professional dog walker and small pet carer, I am fully insured and have over 10 years experience walking dogs and caring for small animals. I dedicate my time to caring for your pets. All the animals in my care are treated with love. Your pet will be treated as my own. I just love animals and of course they always come first.</p>
+  <div class="container-fluid">
+  <div class="jumbotron no-border-radius">
+    <h1 class="page-header">Contact<small class="smally"> Tel: 07971060362 | Email: info@ilovedogwalks.co.uk</small></h2>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-1">
+        <iframe width="500" height="450" frameborder="0" style="margin: 1em;"
+  src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJx_FvA-IZdkgRzce1x-tA2Dc&key=AIzaSyBAbx-I6MUz8mqe4OauNjlkmmVpbYZkHl4" ></iframe>
+      </div>
+      <div class="col-md-5">
+        <h4>Based in North Finchley N12 we cover:</h4>
+        <ul>
+        <li>East Finchley N2</li>
+        <li>Finchley Central N3</li> 
+        <li>North Finchley N12</li>
+        <li>Woodside Park N12</li>
+        <li>Totteridge N20</li>
+        <li>Whetstone N20</li>
+        <li>Friern Barnet N11</li>
+        <li>Muswell Hill N10</li>
+        <li>Mill Hill East NW7 & And all inbetween!</li>
+        </ul>
+        <br>
+        <h4>Where we walk:</h4>
+        <p><small>We are spoilt for choice to where we can go for walkies. Brook Farm Open Space, Darland's Lake Nature Reserve, Hampstead Heath and Highgate Woods just to name a few... London is such a great place to own a dog!</small>
+        </p>
+        <a class="btn btn-success" href="/email">Email Now!</a>
+      </div>
+    </div>
   </div>
 </div>
 
