add hidden for small to index for navbar

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,7 @@
 				ilovedogwalks
 			</a>
 		</div>
-		<ul class="nav navbar-nav navbar-right">
+		<ul class="nav navbar-nav navbar-right hidden-sm hidden-xs">
 			<li><a href="/">Home</a></li>
 			<li><a href="/about">About</a></li>
 			<li><a href="/prices">Prices</a></li>
