add hidden for small for footer on email

--- a/views/pages/email.ejs
+++ b/views/pages/email.ejs
@@ -21,7 +21,7 @@
 	</div>
 </div>
 
-<div class="navbar navbar-fixed-bottom navbar-inverse">
+<div class="navbar navbar-fixed-bottom navbar-inverse hidden-sm hidden-xs">
 	<div class="navbar-text">
 		<p>CreatedBy: CairoStewart</p>
 	</div>
