add testing ems

--- a/public/main.css
+++ b/public/main.css
@@ -48,30 +48,30 @@ address
 blockquote
 {
     font-family: Georgia, serif;
-    font-size: 18px;
+    font-size: 1.125em;
     font-style: italic;
     line-height: 1.45;
 
     position: relative;
 
-    width: 500px;
+    width: 31.25em;
     margin: 1% auto;
-    padding: .35em 40px;
+    padding: .35em 2.5em;
 
     color: white;
 }
 
 blockquote:before
 {
-    font-size: 80px;
+    font-size: 5em;
 
     position: absolute;
-    top: -20px;
-    left: -20px;
+    top: -1.25em;
+    left: -1.25em;
 
     display: block;
 
-    padding-left: 10px;
+    padding-left: 6.25em;
 
     content: '\201C';
 
@@ -80,11 +80,11 @@ blockquote:before
 
 blockquote cite
 {
-    font-size: 14px;
+    font-size: .875em;
 
     display: block;
 
-    margin-top: 5px;
+    margin-top: .3125px;
 
     color: #00bc8c;
 }
@@ -153,8 +153,7 @@ blockquote cite:before
 .square-index
 {
     font-size: 1.8em;
-    min-height: 400px;
-    height: 450px;
+    height: 28.125em;
     max-height: 600px;
     overflow: scroll;
 
@@ -299,6 +298,7 @@ iframe
 
 	.navbar {
 		height: 150px;
+        width: 100%;
 	}
 
 	body {
@@ -306,7 +306,7 @@ iframe
         margin-bottom: 150px;
 	}
 
-	.square-index {
+	/*.square-index {
 		border-radius: 25px;
 		padding: 15px;
 		font-size: 1.8em;
@@ -314,7 +314,7 @@ iframe
 		background: rgba(255, 255, 255, .99);
 		width: 85%;
 		margin-bottom: 15%;
-	}
+	}*/
 
 	img.thumbnail-img {
 		height: 600px;
