--- a/public/main.css
+++ b/public/main.css
@@ -307,7 +307,10 @@ iframe
 		margin-top: 150px;
         margin-bottom: 150px;
 	}
-
+    blockquote {
+        display: none;
+    }
+    
     blockquote:before
 {
     display: none;
