--- a/public/main.css
+++ b/public/main.css
@@ -290,12 +290,12 @@ iframe
 		width: 100;
 	}
 
-	.thumbnail {
+	/*.thumbnail {
 		width: 80%;
 		height: 600px;
 		margin: 1% auto;
 		overflow: hidden;
-	}
+	}*/
     blockquote
     {
         width: 25.5em;
