--- a/public/main.css
+++ b/public/main.css
@@ -269,7 +269,9 @@ iframe
 		width: 100%;
 		margin: 0;
 	}
-    
+    iframe {
+        width: 80%;
+    }
     blockquote {
         display: none;
     }
