mobile integration part 1.1.3

--- a/public/main.css
+++ b/public/main.css
@@ -272,6 +272,10 @@ iframe
     iframe {
         width: 80%;
     }
+
+    .row {
+        margin-top: 1.925em;
+    }
     blockquote {
         display: none;
     }
