--- a/public/main.css
+++ b/public/main.css
@@ -199,7 +199,8 @@ img.thumbnail-img
 
 #profilePic
 {
-    height: 250px;
+    height: 18.75em;
+    width: 100%;
     margin-bottom: 10%;
     margin-left: 1%;
 }
@@ -269,6 +270,7 @@ iframe
 		width: 100%;
 		margin: 0;
 	}
+
     iframe {
         width: 80%;
     }
