--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -25,7 +25,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-4 col-sm-4">
-						<img id="profilePic" class="img-thumbnail" src="dogwalking.jpg" alt="picture of the owner">
+						<img id="profilePic" class="img-thumbnail" src="profilePic.jpg" alt="picture of the owner">
 						<a class="twitter-timeline" href="https://twitter.com/London_Dog_Walk" data-widget-id="681905171434061824" data-chrome="">Tweets by @London_Dog_Walk</a>
 					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
 					</script>
