mobile integration part 1.1.6

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,9 +24,9 @@
 			</a>
 		</div>
 		<ul class="nav navbar-nav navbar-right hidden-sm hidden-xs">
-			<li><a href="/">Home</a></li>
-			<li><a href="/about">About</a></li>
-			<li><a href="/prices">Prices</a></li>
+			<li class="hidden-sm hidden-xs"><a href="/">Home</a></li>
+			<li class="hidden-sm hidden-xs"><a href="/about">About</a></li>
+			<li class="hidden-sm hidden-xs"><a href="/prices">Prices</a></li>
 			<li><a href="/contact">Contact</a></li>
 		</ul>
 	</div>
