mobile integration part 1.1.7

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,7 @@
 				ilovedogwalks
 			</a>
 		</div>
-		<ul class="nav navbar-nav navbar-right hidden-sm hidden-xs">
+		<ul class="nav navbar-nav navbar-right">
 			<li class="hidden-sm hidden-xs"><a href="/">Home</a></li>
 			<li class="hidden-sm hidden-xs"><a href="/about">About</a></li>
 			<li class="hidden-sm hidden-xs"><a href="/prices">Prices</a></li>
