--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,7 +25,7 @@
 		</div>
 		<ul class="nav navbar-nav navbar-right">
 			<li class="hidden-sm hidden-xs"><a href="/">Home</a></li>
-			<li class="hidden-sm hidden-xs"><a href="/about">About</a></li>
+			<li><a href="/about">About</a></li>
 			<li class="hidden-sm hidden-xs"><a href="/prices">Prices</a></li>
 			<li><a href="/contact">Contact</a></li>
 		</ul>
