--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,6 +28,7 @@
 			<li><a href="/about">About</a></li>
 			<li class="hidden-sm hidden-xs"><a href="/prices">Prices</a></li>
 			<li><a href="/contact">Contact</a></li>
+			<li><a href="/email">Email</a></li>
 		</ul>
 	</div>
 </div>
