--- a/public/main.css
+++ b/public/main.css
@@ -1,10 +1,13 @@
+html {
+    font-size: 16px;
+}
+
 body
 {
-    font-size: 16px;
 
     width: 100%;
     height: 100%;
-    margin-top: 60px;
+    margin-top: 3.75em;
 
     background: #2b3e50;
 }
@@ -265,9 +268,6 @@ iframe
 }
 
 @media only screen and (max-device-width: 480px) {
-    body {
-        margin-top: 20em;
-    }
 
 	.container-fluid {
 		width: 100%;
