add 40 em body margintop

--- a/public/main.css
+++ b/public/main.css
@@ -268,7 +268,9 @@ iframe
 }
 
 @media only screen and (max-device-width: 480px) {
-
+    #myCarousel {
+        margin-top: 20em;
+    }
 	.container-fluid {
 		width: 100%;
 		margin: 0;
