minor address changes

--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -19,7 +19,7 @@
 		<div class="col-md-3 col-md-offset-9 text-right"><a href="/reviews" class="reviews btn btn-success">Reviews!</a></div>
 		<div class="row">
 			<div class="col-sm-12">
-				<h1 class="page-header">Services Offered<small class="smally"> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h1>
+				<h1 class="page-header">Services Offered<small class="smally"> Contact: 07971060362 | ilovedogwalks@hotmail.com</small></h1>
 			</div>
 		</div>
 		<div class="row">
