--- a/views/pages/reviews.ejs
+++ b/views/pages/reviews.ejs
@@ -13,7 +13,7 @@
 
 	<div class="container-fluid">
 		<div class="jumbotron">
-			<h1 class="page-header">Reviews<small class="smally"> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h1>
+			<h1 class="page-header">Reviews<small class="smally"> Contact: 07971060362 | ilovedogwalks@hotmail.com</small></h1>
 		</div>
 		<div class="partition-thin"></div>
 		<% reviews.forEach(function(review) { %>
