--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -18,7 +18,7 @@
 			<div class="col-md-9">
 				<div class="col-md-12">
 					<div itemscope>
-						<h1 class="page-header">ABOUT<small class="smally"> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h1>
+						<h1 class="page-header">ABOUT<small class="smally"> Contact: 07971060362 | ilovedogwalks@hotmail.com</small></h1>
 						<span>Owner: Emilie Stewart</span>
 						<span>Dog Walking</span>
 					</div>
