--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -165,7 +165,7 @@
 </div>
   <div class="container-fluid">
   <div class="jumbotron no-border-radius">
-    <h1 class="page-header">Contact<small class="smally"> Tel: 07971060362 | Email: info@ilovedogwalks.co.uk</small></h2>
+    <h1 class="page-header">Contact<small class="smally"> Tel: 07971060362 | Email: ilovedogwalks@hotmail.com</small></h2>
     <div class="row">
       <div class="col-md-6 col-md-offset-1">
         <iframe frameborder="0"
