--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -109,7 +109,7 @@
   <div class="partition">
     <div class="row">
       <div class="col-sm-12">
-        <h2 id="services-offered" class="page-header text-center">Services Offered<small class="smally"> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h2>
+        <h2 id="services-offered" class="page-header text-center">Services Offered<small class="smally"> Contact: 07971060362 | ilovedogwalks@hotmail.com</small></h2>
       </div>
     </div>
     <div class="row">
