mobile header margin-bottom

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -140,7 +140,7 @@
               <li><p>Small Animal feeding including cat visits</p></li>
               <br>
             </ul>
-            <p class="text-center"><a href="/email" class="btn btn-danger" role="button">Inquire Now!</a></p>
+            <p class="text-center"><a href="/email" class="btn btn-small btn-danger">Inquire Now!</a></p>
           </div>
         </div>
       </div>
@@ -154,13 +154,13 @@
             <li><p>General hours 10am - 4pm</p></li>
             <li><p>Includes 2 hours of walking</p></li>
             <li><p>Ideal for the busy animal owner</p></li>
+            <br><br>
             </ul>
             <p class="text-center"><a href="/email" class="btn btn-danger" role="button">Inquire Now!</a></p>
           </div>
         </div>
       </div>
       </div>
-
   </div>
 </div>
   <div class="container-fluid">
